validation of our html and css code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="about">
                     <button>
                         <i class="fas fa-sort-down"></i>
-                        <a href="#">About this capture</a>
+                        About this capture
                     </button>
                 </div>
             </div>
