some corrections to our page espacially to our footer

--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
                     Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail
                         Store</a>, or find a <a href="#">reseller</a>.
                 </small>
-                <small>
-                    <a href="#">Site Map</a> |
-                    <a href="#">Hot News</a> |
-                    <a href="#">RSS Feeds</a> |
-                    <a href="#">Media Info</a> |
-                    <a href="#">Environment</a> |
-                    <a href="#">Job Opportunities</a> |
-                    <a href="#">Contact Us</a> |
-                    <a href="#"><img src="img/usa.png" alt="ussa"></a>
-                </small>
+                <ul>
+                    <li id="first-link"><a href="#">Site Map</a></li>
+                    <li><a href="#">Hot News</a></li>
+                    <li><a href="#">RSS Feeds</a></li>
+                    <li><a href="#">Media Info</a></li>
+                    <li><a href="#">Environment</a></li>
+                    <li><a href="#">Job Opportunities</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#"><img src="img/usa.png" alt="ussa"></a></li>
+                </ul>
             </div>
             <small>
                 Copyright © 20 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#">Privacy
